--- a/home.css
+++ b/home.css
@@ -232,45 +232,36 @@ button {
 .sp-im {
   width: 250px;
 }
-#special-names
-{
+#special-names {
   display: flex;
   justify-content: space-between;
   text-align: center;
   padding-left: 50px;
   margin-right: 200px;
 }
-#special-sp
-{
-
+#special-sp {
   font-size: small;
   margin-top: -10px;
 }
-.spsp
-{
-
+.spsp {
   display: inline-flex;
-  text-align:center;
-  padding-left: 150px; 
+  text-align: center;
+  padding-left: 150px;
 }
-#sp1
-{
+#sp1 {
   margin-left: -110px;
 }
-#sp3
-{
+#sp3 {
   margin-left: -20px;
 }
-#sp4
-{
+#sp4 {
   margin-left: -25px;
 }
-#spbutton
-{
+#spbutton {
   margin-top: 30px;
   margin-left: 40%;
   font-size: 2px;
-  padding:-10px;
+  padding: -10px;
   width: 200px;
 }
 #fac {
@@ -290,7 +281,6 @@ button {
   margin-top: -50px;
   display: flex;
   padding-bottom: 10px;
- 
 }
 .f-head {
   padding: 30px;
@@ -337,7 +327,53 @@ button {
   margin-left: 20px;
 }
 
-.i-read
-{
+.i-read {
   color: rgb(33, 189, 137);
+}
+#sub {
+  background-color: rgb(218, 233, 246);
+  margin-left: -100px;
+  margin-right: 0px;
+  margin-top: -200px;
+  height: 600px;
+}
+#sub-b {
+  position: relative;
+  background-color: white;
+  height: 200px;
+  margin-top: 350px;
+  margin-bottom: 100px;
+  margin-left: 120px;
+  width: 1000px;
+  height: 170px;
+  z-index: 1;
+  position: absolute;
+}
+#sub-head {
+  padding-left: 200px;
+  padding-top: 400px;
+  z-index: 3;
+  position: relative;
+  font-size: medium;
+}
+#sub-p {
+  z-index: 3;
+  position: relative;
+  padding-left: 50%;
+  margin-top: -60px;
+}
+#sub-button {
+  z-index: 3;
+  position: relative;
+  margin-top: -60px;
+  padding-left: 70%;
+  font-size: smaller;
+}
+#sub-hr {
+  z-index: 3;
+  position: relative;
+  margin-left: 440px;
+}
+#hr {
+  width: 54%;
 }
