--- a/home.css
+++ b/home.css
@@ -293,7 +293,7 @@ button {
 }
 #int {
   margin-top: 10px;
-  margin-left: -5px;
+  margin-left: 100px;
 }
 #int-img {
   display: flex;
@@ -343,14 +343,14 @@ button {
   height: 200px;
   margin-top: 350px;
   margin-bottom: 100px;
-  margin-left: 120px;
+  margin-left: 220px;
   width: 1000px;
   height: 170px;
   z-index: 1;
   position: absolute;
 }
 #sub-head {
-  padding-left: 200px;
+  padding-left: 250px;
   padding-top: 400px;
   z-index: 3;
   position: relative;
@@ -359,8 +359,8 @@ button {
 #sub-p {
   z-index: 3;
   position: relative;
-  padding-left: 50%;
-  margin-top: -60px;
+  padding-left: 55%;
+  margin-top: -35px;
 }
 #sub-button {
   z-index: 3;
@@ -372,8 +372,119 @@ button {
 #sub-hr {
   z-index: 3;
   position: relative;
-  margin-left: 440px;
+  margin-left: 545px;
 }
 #hr {
-  width: 54%;
+  width: 51%;
+}
+#foot
+{
+  background-color: white;
+}
+#up-foot
+{
+display: flex;
+justify-content: space-evenly;
+margin-top: 20px;
+}
+#up1
+{
+  font-size: small;
+}
+#up-img
+{
+  width: 200px;
+
+}
+#up2-grid
+{
+  display: grid;
+  grid-template-columns: auto auto;
+  font-size: smaller;
+}
+#up2-h
+{
+  margin-left: 17px;
+}
+.up2-class
+{
+  padding: 15px;
+  padding-top: 0%;
+}
+
+#up3-grid{
+  display: grid;
+  grid-template-columns: auto auto;
+}
+ 
+.up3-class{
+  padding: 15px;
+  padding-top: 0px;
+  font-size: smaller;
+}
+ 
+#up3-h{
+  margin-left: 18px;
+}
+#foot-line{
+  position: relative;
+  z-index: 30;
+  margin-top: -10px;
+}
+ 
+#foot-hr{
+  width: 85%;
+}
+#down-foot
+{
+  display: flex;
+  margin-left: 100px;
+  margin-top: 30px;
+  font-size: x-small;
+
+}
+#df-1
+{
+  padding-right: 10px;
+  display: flex;
+}
+#df1-p
+{
+  margin-top: -4px;
+  padding-left: 20px;
+}
+#df-2
+{
+  display: flex;
+  padding-left: 100px;
+}
+#df2-p
+{
+  margin-top: -4px;
+  padding-left: 20px;
+}
+#df-3
+{
+  display: flex;
+  padding-left: 100px;
+}
+#df3-p
+{
+  margin-top: -4px;
+  padding-left: 20px;
+}
+#df-4
+{
+  margin-left: 70px;
+  margin-top: -4px;
+}
+#df4-h
+{
+  margin-top: 3px;
+}
+#df4-icon
+{
+  font-size: medium;
+  margin-top: 10px;
+  padding-left: 20PX;
 }
